I changed the color and the font-size

--- a/campaign.html
+++ b/campaign.html
@@ -12,12 +12,12 @@
     <link rel="stylesheet" href="css/campaign.css">
 </head>
 
-<body id="Campaign">
+<body id="Line">
     <div id="bd">
         <ul>
             <li class="bd-lista1"><a href="#">1-7 Days Delivery</a></li>
             <li class="bd-lista1"><a href="#">Free Shipping Above 70$</a></li>
-            <li class="bd-lista1"><a href="#">14 Days To Return</a></li>
+            <li class="bd-lista1"><a href="returns.html">14 Days To Return</a></li>
         </ul>
     </div>
     <div class="bd-autumnwinter">
@@ -140,7 +140,7 @@
                 <td><a href="#">CONTACT</a></td>
             </tr>
             <tr>
-                <td><a href="about.html">RETURNS</a></td>
+                <td><a href="returns.html">RETURNS</a></td>
                 <td><a href="#">COOKIES</a></td>
                 <!-- No td here -->
             </tr>
