--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <ul class="bd-listaul">
         <li class="bd-lista1" class="bd-lii"><a href="#">1-7 Days Delivery</a></li>
         <li class="bd-lista1" class="bd-lii"><a href="#">Free Shipping Above 70$</a></li>
-        <li class="bd-lista1" class="bd-lii"><a href="#">14 Days To Return</a></li>
+        <li class="bd-lista1" class="bd-lii"><a href="returns.html">14 Days To Return</a></li>
         <!-- START -->
         <div class="bd-countries">
             <label class="bd-label" for="Country">Select your country</label>
@@ -93,7 +93,7 @@
             <td><a href="#">CONTACT</a></td>
         </tr>
         <tr>
-            <td><a href="about.html">RETURNS</a></td>
+            <td><a href="returns.html">RETURNS</a></td>
             <td><a href="#">COOKIES</a></td>
             <!-- No td here -->
         </tr>
