--- a/clothesnaccessories.html
+++ b/clothesnaccessories.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="css/sale.css">
 </head>
-<body>
+<body id="Line">
     <div class="bd-header">
 <h3>SHOP BY CATEGORY</h3>   
 <h4><a href="#accessories" class="bd-a">ACCESSORIES</a></h4>
@@ -192,7 +192,7 @@
 </div>
     </div>
     <br><br>
-    <footer>LINA'S COLLECTION OF ELEGANT TAILORED PIECES LETS ANY WEARER CREATE A TIMELESS LOOK FROM THE COLLECTION OF BLAZERS, PANTS AND SUITS. WITH A VARIETY OF COLOURFUL PRINTS AND MONOCHROME PIECES, LINA PROVIDES THE PERFECT PIECES THAT WILL NEVER GO OUT OF STYLE.</footer>
+    <footer>LINE'S COLLECTION OF ELEGANT TAILORED PIECES LETS ANY WEARER CREATE A TIMELESS LOOK FROM THE COLLECTION OF BLAZERS, PANTS AND SUITS. WITH A VARIETY OF COLOURFUL PRINTS AND MONOCHROME PIECES, LINA PROVIDES THE PERFECT PIECES THAT WILL NEVER GO OUT OF STYLE.</footer>
     <br><br><br>
     <!-- THE END -->
     <div class="bd-part2">
@@ -214,7 +214,7 @@
                 <td><a href="#">CONTACT</a></td>
             </tr>
             <tr>
-                <td><a href="about.html">RETURNS</a></td>
+                <td><a href="returns.html">RETURNS</a></td>
                 <td><a href="#">COOKIES</a></td>
                 <!-- No td here -->
             </tr>
