--- a/latestproducts.html
+++ b/latestproducts.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pre-spring 2023</title>
+  <title>Latest Products</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
@@ -13,13 +13,13 @@
   <script src="https://kit.fontawesome.com/8b22eac84a.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body id="Line">
   
     <div id="bd">
       <ul>
         <li class="bd-lista1"><a href="#">1-7 Days Delivery</a></li>
         <li class="bd-lista1"><a href="#">Free Shipping Above 70$</a></li>
-        <li class="bd-lista1"><a href="#">14 Days To Return</a></li>
+        <li class="bd-lista1"><a href="returns.html">14 Days To Return</a></li>
       </ul>
     </div>      <h1 class="bd-h1">LATEST PRODUCTS</h1>
     <br>
