--- a/returns.html
+++ b/returns.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/8b22eac84a.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/returns.css">
 </head>
 <body>
     <div class="partone">
@@ -45,21 +45,25 @@
     </ul>
 </div></div> 
 <div class="bd-blue"></div>
-<div class="clearfix"></div>
+<div class="bd-clearfix"></div>
 <br><br><br>
 <!-- JS -->
 <div class="row">
   <div>
-    <a href="javascript:void();" class="btn btn-sm animated-button thar-two">Button 1</a>
-    <p class="demo" style="display: none">TEXT TEXT TEXT</p>
+    <a href="javascript:void();" class="btn btn-sm animated-button thar-two">Why are returns not free?</a>
+    <p class="demo" style="display: none">As a small business, the cost of return shipping is so large we have often had <br> to consider whether we can afford to ship back and forth to customers <br> internationally. However in order to maintain a relationship with our <br> international customer base, we felt the best option would be to help share <br> the cost of returns. This allows us to continue serving international customers <br> without running at losses on the cost of shipping.</p>
   </div>
   <div>
-    <a href="javascript:void();" class="btn btn-sm animated-button thar-two">Button 2</a>
-    <p class="demo" style="display: none">TEXT 2 TEXT 2 TEXT 2</p>
+    <a href="javascript:void();" class="btn btn-sm animated-button thar-two">How long will it take to receive my refund?</a>
+    <p class="demo" style="display: none">It will take between 3-5 working days for this transaction to be authorised by your <br> bank and for your funds to appear in your account. You will receive your <br> refund in the original form of payment. (We cannot issue refunds to an <br> alternative card or bank under any circumstances).</p>
   </div>
   <div>
-    <a href="javascript:void();" class="btn btn-sm animated-button thar-two">Button 3</a>
-    <p class="demo" style="display: none">TEXT 3 TEXT 3 TEXT 3</p>
+    <a href="javascript:void();" class="btn btn-sm animated-button thar-two">How long will it take to get my exchange?</a>
+    <p class="demo" style="display: none">Exchanges will be processed within 5-7 working days. If you require your <br> exchanged item sooner, please do contact our customer care team, they will <br> be able to advise you on how to achieve this. </p>
+  </div>
+  <div>
+    <a href="javascript:void();" class="btn btn-sm animated-button thar-two bd-lastone">What if my return gets lost?</a>
+    <p class="demo" style="display: none">Return shipments are tracked. In the unlikely event that you are worried the <br> return has been lost, please get in touch so that we can find a solution </p>
   </div>
 </div>
 <script>
@@ -110,7 +114,7 @@
           <td><a href="#">CONTACT</a></td>
       </tr>
       <tr>
-          <td><a href="about.html">RETURNS</a></td>
+          <td><a href="returns.html">RETURNS</a></td>
           <td><a href="#">COOKIES</a></td>
           <!-- No td here -->
       </tr>
