--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,15 +8,16 @@
     <title>LINE</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body id="LINE">
     <div class="bd-container">
-<div id="bd">
-    <ul class="bd-listaul">
-        <li class="bd-lista1" class="bd-lii"><a href="#">1-7 Days Delivery</a></li>
-        <li class="bd-lista1" class="bd-lii"><a href="#">Free Shipping Above 70$</a></li>
-        <li class="bd-lista1" class="bd-lii"><a href="returns.html">14 Days To Return</a></li>
-        <!-- START -->
-        <div class="bd-countries">
+        <div id="bd">
+            <ul class="bd-listaul">
+                <li class="bd-lista1" class="bd-lii"><a href="#" class="bd-aa">1-7 Days Delivery</a></li>
+                <li class="bd-lista1" class="bd-lii"><a href="#" class="bd-aa">Free Shipping Above 70$</a></li>
+                <li class="bd-lista1" class="bd-lii"><a href="returns.html" class="bd-aa">14 Days To Return</a></li>
+                <!-- START -->
+                <!-- <div class="bd-countries">
             <label class="bd-label" for="Country">Select your country</label>
             <select class="bd-selections" name="country">
                 <option value="Albania">Albania</option>
@@ -37,68 +39,73 @@
                 <option value="UK">UK</option>
                 <option value="US">US</option>
             </select>
-        </div> 
-        <!-- END -->
-        <!-- CHANGING THE MENU -->
-    </ul>
-</div>
-<div class="bd-sale"><h1>LINE</h1>
-<ul class="bd-listaul"><li><a href="clothesnaccessories.html">SALE</a></li>
-    <li class="bd-lii"><a href="latestproducts.html"class="bd">NEW IN</a></li>
-    <li class="bd-lii"><a href="clothesnaccessories.html">CLOTHING</a></li>
-    <li class="bd-lii"><a href="clothesnaccessories.html">ACCESORIES</a></li>
-    <li class="bd-lii"><a href="latestproducts.html">SHOES</a></li>
-    <li class="bd-lii"><a href="campaign.html">CAMPAIGNS</a></li>
-</ul>
-  <h2 class="bd-heading2"><a href="clothesnaccessories.html">SALE 40% OFF</a></h2>
-</div>
-<div><h3><a href="clothesnaccessories.html">SHOP NOW</a></h3></div>
-<section class="bd-full-block">
-    <div class="bd-container2">
-        <div class="bd-flex-container">
-            <article class="bd-article-img">
-                <a href="">
-                 <figure><img src="women/basicknittedscarf.jpg" class="bd-230"></figure>   
-                </a>
-                <a href="">
-                    <figure><img src="women/blackjacket.jpg" class="bd-230"></figure>
-                </a>
-                <a href="">
-                    <figure><img src="women/crossovercapesleeveblouse.jpg" class="bd-230"></figure>
-                </a>
-                <a href="">
-                    <figure><img src="women/croppedfauxfurjacket.jpg" class="bd-230"></figure>
-                </a>
-            </article>
+        </div>  -->
+                <!-- END -->
+                <!-- CHANGING THE MENU -->
+            </ul>
+        </div>
+        <div class="bd-sale">
+            <h1 class="bd-name">LINE</h1>
+            <ul class="bd-listaul">
+                <li class="bd-li"><a href="clothesnaccessories.html" class="bd">SALE</a></li>
+                <li class="bd-li"><a href="latestproducts.html" class="bd">NEW IN</a></li>
+                <li class="bd-li"><a href="clothesnaccessories.html" class="bd">CLOTHING</a></li>
+                <li class="bd-li"><a href="clothesnaccessories.html" class="bd">ACCESORIES</a></li>
+                <li class="bd-li"><a href="latestproducts.html" class="bd">SHOES</a></li>
+                <li class="bd-li"><a href="campaign.html" class="bd">CAMPAIGNS</a></li>
+            </ul>
+            <h2 class="bd-heading2"><a href="clothesnaccessories.html">SALE 40% OFF</a></h2>
+        </div>
+        <div>
+            <h3><a href="clothesnaccessories.html">SHOP NOW</a></h3>
+        </div>
+        <section class="bd-full-block">
+            <div class="bd-container2">
+                <div class="bd-flex-container">
+                    <article class="bd-article-img">
+                        <a href="">
+                            <figure><img src="women/basicknittedscarf.jpg" class="bd-230"></figure>
+                        </a>
+                        <a href="">
+                            <figure><img src="women/blackjacket.jpg" class="bd-230"></figure>
+                        </a>
+                        <a href="">
+                            <figure><img src="women/crossovercapesleeveblouse.jpg" class="bd-230"></figure>
+                        </a>
+                        <a href="">
+                            <figure><img src="women/croppedfauxfurjacket.jpg" class="bd-230"></figure>
+                        </a>
+                    </article>
+                </div>
+            </div>
+        </section>
+        <!-- <div class="bd-part2"></div> -->
+        <div class="bd-part2">
+            <h2 class="bd-h2">LINE</h2>
+            <table class="bd-table1">
+                <tr>
+                    <th>SUPPORT</th>
+                    <th>LEGAL</th>
+                    <th>LINE</th>
+                </tr>
+                <tr>
+                    <td><a href="#">E-GIFT CARD</a></td>
+                    <td><a href="#">TERMS & CONDITIONS</a></td>
+                    <td><a href="#">ABOUT</a></td>
+                </tr>
+                <tr>
+                    <td><a href="#">DELIVERY</a></td>
+                    <td><a href="#">PRIVACY POLICY</a></td>
+                    <td><a href="#">CONTACT</a></td>
+                </tr>
+                <tr>
+                    <td><a href="returns.html">RETURNS</a></td>
+                    <td><a href="#">COOKIES</a></td>
+                    <!-- No td here -->
+                </tr>
+            </table>
         </div>
     </div>
-</section>
-<!-- <div class="bd-part2"></div> -->
-<div class="bd-part2">
-    <h2 class="bd-h2">LINE</h2>
-    <table class="bd-table1">
-        <tr>
-            <th>SUPPORT</th>
-            <th>LEGAL</th>
-            <th>LINE</th>
-        </tr>
-        <tr>
-            <td><a href="#">E-GIFT CARD</a></td>
-            <td><a href="#">TERMS & CONDITIONS</a></td>
-            <td><a href="#">ABOUT</a></td>
-        </tr>
-        <tr>
-            <td><a href="#">DELIVERY</a></td>
-            <td><a href="#">PRIVACY POLICY</a></td>
-            <td><a href="#">CONTACT</a></td>
-        </tr>
-        <tr>
-            <td><a href="returns.html">RETURNS</a></td>
-            <td><a href="#">COOKIES</a></td>
-            <!-- No td here -->
-        </tr>
-    </table>
-</div>
-</div>
 </body>
+
 </html>
