changed structure of index page

--- a/index.html
+++ b/index.html
@@ -10,102 +10,88 @@
 </head>
 
 <body id="LINE">
-    <div class="bd-container">
-        <div id="bd">
-            <ul class="bd-listaul">
-                <li class="bd-lista1" class="bd-lii"><a href="#" class="bd-aa">1-7 Days Delivery</a></li>
-                <li class="bd-lista1" class="bd-lii"><a href="#" class="bd-aa">Free Shipping Above 70$</a></li>
-                <li class="bd-lista1" class="bd-lii"><a href="returns.html" class="bd-aa">14 Days To Return</a></li>
-                <!-- START -->
-                <!-- <div class="bd-countries">
-            <label class="bd-label" for="Country">Select your country</label>
-            <select class="bd-selections" name="country">
-                <option value="Albania">Albania</option>
-                <option value="Australia">Australia</option>
-                <option value="Brazil">Brazil</option>
-                <option value="Canada">Canada</option>
-                <option value="Chile">Chile</option>
-                <option value="Danmark">Danmark</option>
-                <option value="Ethiopia">Ethiopia</option>
-                <option value="France">France</option>
-                <option value="Finland">Finland</option>
-                <option value="Germany">Germany</option>
-                <option value="Italy">Italy</option>
-                <option value="Kosovo">Kosovo</option>
-                <option value="Lithuania">Lithuania</option>
-                <option value="Macedonia">Macedonia</option>
-                <option value="Monaco">Monaco</option>
-                <option value="Spain">Spain</option>
-                <option value="UK">UK</option>
-                <option value="US">US</option>
-            </select>
-        </div>  -->
-                <!-- END -->
-                <!-- CHANGING THE MENU -->
-            </ul>
-        </div>
-        <div class="bd-sale">
-            <h1 class="bd-name">LINE</h1>
-            <ul class="bd-listaul">
-                <li class="bd-li"><a href="clothesnaccessories.html" class="bd">SALE</a></li>
-                <li class="bd-li"><a href="latestproducts.html" class="bd">NEW IN</a></li>
-                <li class="bd-li"><a href="clothesnaccessories.html" class="bd">CLOTHING</a></li>
-                <li class="bd-li"><a href="clothesnaccessories.html" class="bd">ACCESORIES</a></li>
-                <li class="bd-li"><a href="latestproducts.html" class="bd">SHOES</a></li>
-                <li class="bd-li"><a href="campaign.html" class="bd">CAMPAIGNS</a></li>
-            </ul>
-            <h2 class="bd-heading2"><a href="clothesnaccessories.html">SALE 40% OFF</a></h2>
-        </div>
-        <div>
-            <h3><a href="clothesnaccessories.html">SHOP NOW</a></h3>
-        </div>
-        <section class="bd-full-block">
-            <div class="bd-container2">
-                <div class="bd-flex-container">
-                    <article class="bd-article-img">
-                        <a href="">
-                            <figure><img src="women/basicknittedscarf.jpg" class="bd-230"></figure>
-                        </a>
-                        <a href="">
-                            <figure><img src="women/blackjacket.jpg" class="bd-230"></figure>
-                        </a>
-                        <a href="">
-                            <figure><img src="women/crossovercapesleeveblouse.jpg" class="bd-230"></figure>
-                        </a>
-                        <a href="">
-                            <figure><img src="women/croppedfauxfurjacket.jpg" class="bd-230"></figure>
-                        </a>
-                    </article>
-                </div>
+        <header class="bd-full-block">
+            <div id="bd">
+                <ul class="bd-listaul">
+                    <li class="bd-lista1" class="bd-lii"><a href="#" class="bd-aa">1-7 Days Delivery</a></li>
+                    <li class="bd-lista1" class="bd-lii"><a href="#" class="bd-aa">Free Shipping Above 70$</a></li>
+                    <li class="bd-lista1" class="bd-lii"><a href="returns.html" class="bd-aa">14 Days To Return</a></li>
+                </ul>
             </div>
-        </section>
+        </header>
+
+        <main class="bd-full-block">
+            <section class="bd-full-block">
+                <div class="bd-sale">
+                    <div>
+                        <h1 class="bd-name">LINE</h1>
+                        <ul class="bd-listaul">
+                            <li class="bd-li"><a href="clothesnaccessories.html" class="bd">SALE</a></li>
+                            <li class="bd-li"><a href="latestproducts.html" class="bd">NEW IN</a></li>
+                            <li class="bd-li"><a href="clothesnaccessories.html" class="bd">CLOTHING</a></li>
+                            <li class="bd-li"><a href="clothesnaccessories.html" class="bd">ACCESORIES</a></li>
+                            <li class="bd-li"><a href="latestproducts.html" class="bd">SHOES</a></li>
+                            <li class="bd-li"><a href="campaign.html" class="bd">CAMPAIGNS</a></li>
+                        </ul>
+                    </div>
+                    <div class="bd-heading-container">
+                        <h2 class="bd-heading2"><a href="clothesnaccessories.html">SALE 40% OFF</a></h2>
+                    </div>
+                </div>
+            
+            </section>
+            <section class="bd-full-block">
+                <div>
+                    <h3><a href="clothesnaccessories.html">SHOP NOW</a></h3>
+                </div>
+                <div class="bd-container2">
+                    <div class="bd-flex-container">
+                        <article class="bd-article-img">
+                            <a href="">
+                                <figure><img src="women/basicknittedscarf.jpg" class="bd-230"></figure>
+                            </a>
+                            <a href="">
+                                <figure><img src="women/blackjacket.jpg" class="bd-230"></figure>
+                            </a>
+                            <a href="">
+                                <figure><img src="women/crossovercapesleeveblouse.jpg" class="bd-230"></figure>
+                            </a>
+                            <a href="">
+                                <figure><img src="women/croppedfauxfurjacket.jpg" class="bd-230"></figure>
+                            </a>
+                        </article>
+                    </div>
+                </div>
+            </section>
+        </main>
         <!-- <div class="bd-part2"></div> -->
-        <div class="bd-part2">
-            <h2 class="bd-h2">LINE</h2>
-            <table class="bd-table1">
-                <tr>
-                    <th>SUPPORT</th>
-                    <th>LEGAL</th>
-                    <th>LINE</th>
-                </tr>
-                <tr>
-                    <td><a href="#">E-GIFT CARD</a></td>
-                    <td><a href="#">TERMS & CONDITIONS</a></td>
-                    <td><a href="#">ABOUT</a></td>
-                </tr>
-                <tr>
-                    <td><a href="#">DELIVERY</a></td>
-                    <td><a href="#">PRIVACY POLICY</a></td>
-                    <td><a href="#">CONTACT</a></td>
-                </tr>
-                <tr>
-                    <td><a href="returns.html">RETURNS</a></td>
-                    <td><a href="#">COOKIES</a></td>
-                    <!-- No td here -->
-                </tr>
-            </table>
-        </div>
-    </div>
+        <footer class="bd-full-block">
+            <div class="bd-part2">
+                <h2 class="bd-h2">LINE</h2>
+                <table class="bd-table1">
+                    <tr>
+                        <th>SUPPORT</th>
+                        <th>LEGAL</th>
+                        <th>LINE</th>
+                    </tr>
+                    <tr>
+                        <td><a href="#">E-GIFT CARD</a></td>
+                        <td><a href="#">TERMS & CONDITIONS</a></td>
+                        <td><a href="#">ABOUT</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="#">DELIVERY</a></td>
+                        <td><a href="#">PRIVACY POLICY</a></td>
+                        <td><a href="#">CONTACT</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="returns.html">RETURNS</a></td>
+                        <td><a href="#">COOKIES</a></td>
+                        <!-- No td here -->
+                    </tr>
+                </table>
+            </div>
+        </footer>
 </body>
 
 </html>
